# cli

./: Cargo.toml  Dockerfile  README.md  all_messages.json  commit1.json  commit2.json  commits.json  contributor_secret_key.json  extrinsic_info.json  keys  keys.json  messages.json  nonce1.json  nonce2.json  nonces.json  output_round1.json  outputs.json  packages.json  packages2.json  recipient_secret_key.json  recipients.json  share1.json  share2.json  shares.json  signature.json  signing_commitments.json  signing_nonces.json  signing_packages.json  signing_share.json  source.json  spp_output.json  threshold_public_key.json  tpk.json
src/: cli.rs  errors.rs  files.rs  main.rs  multisig.rs  rpc.rs  simplpedpop.rs  structs.rs  utils.rs
src/cli/: errors.rs  mod.rs
src/cli/commands/: aggregate.rs  generate.rs  mod.rs  multisig.rs  sign.rs  simplpedpop.rs  submit.rs
