[package]
name = "cli_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
schnorrkel = { git = "https://github.com/Fiono11/schnorrkel", branch = "final_frost", features = [
    "alloc",
    "aead",
] }
rand_core = { version = "0.6.2", default-features = false }
serde_json = "1.0"
subxt = "0.35.3"
subxt-signer = "0.35.3"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
bs58 = "0.5"
