[package]
name = "cli_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
olaf = { path = "../olaf" }
rand_core = { version = "0.6.2", default-features = false }
serde_json = "1.0"
ed25519-dalek = { path = "../curve25519-dalek/ed25519-dalek", features = [
    "hazmat",
    "rand_core",
] }
hex = "0.4.2"
blake2 = "0.10"
reqwest = { version = "0.11.7", default-features = false, features = ["json"]}
anyhow = "1.0.40"
