[package]
name = "olaf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
schnorrkel = { git = "https://github.com/Fiono11/schnorrkel" }
clap = { version = "4.5.2", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0"
subxt = "0.38"
subxt-signer = "0.38"
hex = "0.4"
sp-core = "34.0"

[dev-dependencies]
rand = "0.8.5"